--- a/src/main/resources/views/gameViewNew.fxml
+++ b/src/main/resources/views/gameViewNew.fxml
@@ -77,7 +77,7 @@
                                         <Insets left="10.0" />
                                     </HBox.margin>
                                 </VBox>
-                        <Label fx:id="turn1" maxHeight="15.0" maxWidth="15.0" minHeight="25.0" minWidth="25.0" prefHeight="15.0" prefWidth="15.0" styleClass="turn" stylesheets="@../stylesheets/buttonstyle.css" />
+                        <Label fx:id="turn1" maxHeight="15.0" maxWidth="15.0" minHeight="25.0" minWidth="25.0" prefHeight="15.0" prefWidth="15.0" styleClass="turn" stylesheets="@../stylesheets/buttonstyle.css" visible="false" />
                             </children>
                             <cursor>
                                 <Cursor fx:constant="HAND" />
@@ -110,7 +110,7 @@
                                         <Insets left="10.0" />
                                     </HBox.margin>
                                 </VBox>
-                        <Label fx:id="turn2" maxHeight="15.0" maxWidth="15.0" minHeight="25.0" minWidth="25.0" prefHeight="15.0" prefWidth="15.0" styleClass="turn" stylesheets="@../stylesheets/buttonstyle.css" />
+                        <Label fx:id="turn2" maxHeight="15.0" maxWidth="15.0" minHeight="25.0" minWidth="25.0" prefHeight="15.0" prefWidth="15.0" styleClass="turn" stylesheets="@../stylesheets/buttonstyle.css" visible="false" />
                             </children>
                             <cursor>
                                 <Cursor fx:constant="HAND" />
@@ -143,7 +143,7 @@
                                         <Insets left="10.0" />
                                     </HBox.margin>
                                 </VBox>
-                        <Label fx:id="turn3" maxHeight="15.0" maxWidth="15.0" minHeight="25.0" minWidth="25.0" prefHeight="15.0" prefWidth="15.0" styleClass="turn" stylesheets="@../stylesheets/buttonstyle.css" />
+                        <Label fx:id="turn3" maxHeight="15.0" maxWidth="15.0" minHeight="25.0" minWidth="25.0" prefHeight="15.0" prefWidth="15.0" styleClass="turn" stylesheets="@../stylesheets/buttonstyle.css" visible="false" />
                             </children>
                             <cursor>
                                 <Cursor fx:constant="HAND" />
@@ -176,7 +176,7 @@
                                         <Insets left="10.0" />
                                     </HBox.margin>
                                 </VBox>
-                        <Label fx:id="turn4" maxHeight="15.0" maxWidth="15.0" minHeight="25.0" minWidth="25.0" prefHeight="15.0" prefWidth="15.0" styleClass="turn" stylesheets="@../stylesheets/buttonstyle.css" />
+                        <Label fx:id="turn4" maxHeight="15.0" maxWidth="15.0" minHeight="25.0" minWidth="25.0" prefHeight="15.0" prefWidth="15.0" styleClass="turn" stylesheets="@../stylesheets/buttonstyle.css" visible="false" />
                             </children>
                             <cursor>
                                 <Cursor fx:constant="HAND" />
