--- a/src/main/resources/views/createGame.fxml
+++ b/src/main/resources/views/createGame.fxml
@@ -100,7 +100,7 @@
                   </HBox>
                   <HBox alignment="CENTER" prefHeight="75.0" prefWidth="200.0" spacing="15.0">
                      <children>
-                        <Button mnemonicParsing="false" onMouseClicked="#kickPlayerTwo" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Kick">
+                        <Button fx:id="kickTwo" mnemonicParsing="false" onMouseClicked="#kickPlayerTwo" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Kick">
                            <font>
                               <Font name="Chalkboard" size="18.0" />
                            </font>
@@ -119,7 +119,7 @@
                   </HBox>
                   <HBox alignment="CENTER" prefHeight="75.0" prefWidth="200.0" spacing="15.0">
                      <children>
-                        <Button mnemonicParsing="false" onMouseClicked="#kickPlayerThree" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Kick">
+                        <Button fx:id="kickThree" mnemonicParsing="false" onMouseClicked="#kickPlayerThree" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Kick">
                            <font>
                               <Font name="Chalkboard" size="18.0" />
                            </font>
@@ -138,7 +138,7 @@
                   </HBox>
                   <HBox alignment="CENTER" prefHeight="75.0" prefWidth="200.0" spacing="15.0">
                      <children>
-                        <Button mnemonicParsing="false" onMouseClicked="#kickPlayerFour" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Kick">
+                        <Button fx:id="kickFour" mnemonicParsing="false" onMouseClicked="#kickPlayerFour" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Kick">
                            <font>
                               <Font name="Chalkboard" size="18.0" />
                            </font>
