--- a/src/main/resources/views/playerLobbyView.fxml
+++ b/src/main/resources/views/playerLobbyView.fxml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0"
-            prefWidth="1152.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+            minWidth="-Infinity" prefHeight="700.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/11.0.1"
             fx:controller="gui.controllers.PlayerLobbyController">
     <children>
         <Label alignment="CENTER" contentDisplay="CENTER" layoutX="268.0" layoutY="321.0" prefHeight="80.0"
@@ -95,8 +90,9 @@
                                 <Insets bottom="10.0" right="20.0" top="35.0"/>
                             </HBox.margin>
                         </Label>
-                        <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#changeToProfileView"
-                                   pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;">
+                        <ImageView fx:id="profileImage" fitHeight="100.0" fitWidth="100.0"
+                                   onMouseClicked="#changeToProfileView" pickOnBounds="true" preserveRatio="true"
+                                   style="-fx-cursor: hand;">
                             <HBox.margin>
                                 <Insets bottom="10.0" left="10.0" right="20.0" top="35.0"/>
                             </HBox.margin>
