--- a/src/main/resources/views/settings.fxml
+++ b/src/main/resources/views/settings.fxml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.SettingsController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.SettingsController">
     <children>
         <Label alignment="CENTER" contentDisplay="CENTER" layoutX="268.0" layoutY="321.0" prefHeight="80.0" style="-fx-background-color: #fdf8da;" text="Settings" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <font>
@@ -31,93 +28,47 @@
                 <Font name="Chalkboard" size="18.0" />
             </font>
         </Button>
-        <BorderPane layoutX="477.0" layoutY="206.0" prefHeight="200.0" prefWidth="346.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="70.0">
-            <center>
-                <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="20.0" BorderPane.alignment="CENTER">
-                    <children>
-                  <GridPane prefHeight="316.0" prefWidth="1115.0">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
+        <BorderPane layoutX="477.0" layoutY="206.0" prefHeight="200.0" prefWidth="346.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="80.0">
+         <center>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <children>
+                        <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="100.0" prefWidth="300.0" style="-fx-background-color: #e5e5e5; -fx-background-radius: 15; -fx-border-width: 1; -fx-border-color: black; -fx-border-radius: 15; -fx-effect: innershadow(gaussian, rgba(0, 0, 0, 0.7), 10, 0, 0, 0);" text="Sound" textAlignment="CENTER">
+                            <font>
+                                <Font name="Chalkboard" size="36.0" />
+                            </font>
+                     <HBox.margin>
+                        <Insets right="100.0" />
+                     </HBox.margin>
+                        </Button>
+                  <HBox alignment="CENTER_LEFT" prefHeight="100.0" spacing="40.0">
                      <children>
-                              <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="100.0" prefWidth="400.0" styleClass="bigButton" stylesheets="@../stylesheets/buttonstyle.css" text="Sound" textAlignment="CENTER">
-                                  <font>
-                                      <Font name="Chalkboard" size="36.0" />
-                                  </font>
-                           <GridPane.margin>
-                              <Insets left="50.0" />
-                           </GridPane.margin>
-                              </Button>
-                              <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="100.0" prefWidth="400.0" styleClass="bigButton" stylesheets="@../stylesheets/buttonstyle.css" text="Animation" GridPane.rowIndex="1">
-                                  <font>
-                                      <Font name="Chalkboard" size="36.0" />
-                                  </font>
-                           <GridPane.margin>
-                              <Insets left="50.0" />
-                           </GridPane.margin>
-                              </Button>
-                              <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="100.0" prefWidth="400.0" styleClass="bigButton" stylesheets="@../stylesheets/buttonstyle.css" text="Default Dictionary" GridPane.rowIndex="2">
-                                  <font>
-                                      <Font name="Chalkboard" size="36.0" />
-                                  </font>
-                           <GridPane.margin>
-                              <Insets left="50.0" />
-                           </GridPane.margin>
-                              </Button>
-                        <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
-                           <children>
-                              <CheckBox fx:id="soundOn" mnemonicParsing="false" onAction="#enableSound" onMouseClicked="#enableSound" text="ON">
-                                 <font>
-                                    <Font name="Chalkboard" size="36.0" />
-                                 </font>
-                                 <HBox.margin>
-                                    <Insets top="20.0" />
-                                 </HBox.margin>
-                              </CheckBox>
-                              <CheckBox fx:id="soundOff" mnemonicParsing="false" onAction="#disableSound" onMouseClicked="#disableSound" text="OFF">
-                                 <HBox.margin>
-                                    <Insets left="10.0" top="20.0" />
-                                 </HBox.margin>
-                                 <font>
-                                    <Font name="Chalkboard" size="36.0" />
-                                 </font>
-                              </CheckBox>
-                           </children>
-                        </HBox>
-                        <HBox layoutX="556.0" layoutY="10.0" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                           <children>
-                              <CheckBox fx:id="animationsOn" mnemonicParsing="false" onAction="#enableAnimations" onMouseClicked="#enableAnimations" text="ON">
-                                 <font>
-                                    <Font name="Chalkboard" size="36.0" />
-                                 </font>
-                                 <HBox.margin>
-                                    <Insets top="20.0" />
-                                 </HBox.margin>
-                              </CheckBox>
-                              <CheckBox fx:id="animationsOff" mnemonicParsing="false" onAction="#disableAnimations" onMouseClicked="#disableAnimations" text="OFF">
-                                 <HBox.margin>
-                                    <Insets left="10.0" top="20.0" />
-                                 </HBox.margin>
-                                 <font>
-                                    <Font name="Chalkboard" size="36.0" />
-                                 </font>
-                              </CheckBox>
-                           </children>
-                        </HBox>
+                        <CheckBox fx:id="soundOn" mnemonicParsing="false" onMouseClicked="#enableSound" selected="true" text="ON">
+                           <font>
+                              <Font name="Chalkboard" size="36.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </CheckBox>
+                        <CheckBox fx:id="soundOff" mnemonicParsing="false" onMouseClicked="#disableSound" text="OFF">
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                           <font>
+                              <Font name="Chalkboard" size="36.0" />
+                           </font>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </CheckBox>
                      </children>
-                  </GridPane>
-                    </children>
-                    <BorderPane.margin>
-                        <Insets bottom="30.0" left="30.0" right="30.0" top="50.0" />
-                    </BorderPane.margin>
-                </VBox>
-            </center>
+                  </HBox>
+               </children>
+            </HBox>
+         </center>
         </BorderPane>
     </children>
 </AnchorPane>
