--- a/src/main/resources/views/gameChat.fxml
+++ b/src/main/resources/views/gameChat.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="402.0" prefWidth="288.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.gameChatController">
+<AnchorPane prefHeight="402.0" prefWidth="288.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.GameChatController">
    <children>
       <VBox layoutX="100.0" layoutY="-1.0" prefHeight="403.0" prefWidth="288.0" style="-fx-background-color: #fbf8da #fbf8da;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-1.0">
          <children>
